--- a/WeatherPy/WeatherPycode.ipynb
+++ b/WeatherPy/WeatherPycode.ipynb
@@ -8,7 +8,7 @@
     "\n",
     "---\n",
     "\n",
-    "## Starter Code to Generate Random Geographic Coordinates and a List of Cities"
+    "## Code to Generate Random Geographic Coordinates and a List of Cities"
    ]
   },
   {
@@ -43,14 +43,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Number of cities in the list: 587\n"
+      "Number of cities in the list: 594\n"
      ]
     }
    ],
@@ -730,7 +730,7 @@
    ],
    "source": [
     "# Set the API base URL\n",
-    "url = # YOUR CODE HERE\n",
+    "url = \"https://api.openweathermap.org/data/2.5/weather?\"\n",
     "\n",
     "# Define an empty list to fetch the weather data for each city\n",
     "city_data = []\n",
@@ -752,7 +752,7 @@
     "        record_count = 0\n",
     "\n",
     "    # Create endpoint URL with each city\n",
-    "    city_url = # YOUR CODE HERE\n",
+    "    city_url = \n",
     "\n",
     "    # Log the url, record, and set numbers\n",
     "    print(\"Processing Record %s of Set %s | %s\" % (record_count, set_count, city))\n",
@@ -1871,9 +1871,9 @@
    "name": "python3"
   },
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python [conda env:base] *",
    "language": "python",
-   "name": "python3"
+   "name": "conda-base-py"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1885,7 +1885,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.14"
+   "version": "3.12.7"
   },
   "latex_envs": {
    "LaTeX_envs_menu_present": true,
